src/SingleListPage/ListMenu.css
/* Universal styling for all Single List Page menus */
/* first three styles are for sticky toolbar */
.single-list-page-menu {
  background: #feffff;
  color: #172528;
  display: grid;
  align-items: center;
  padding-top: 0.3em;
  padding-bottom: 0.3em;
  padding-left: 1em;
}

/* On small screens, menu will be fixed at bottom of screen */
.small-screen-list-menu {
  bottom: 0;
  position: fixed; /* use fixed instead of sticky so menu is at bottom even if we don't have that many lists */
  width: 100%;
}

/* On large screens, menu will be positioned relative to 3 dots in the list header and will have a set width */
.large-screen-list-menu {
  position: absolute;
  top: 30px;
  right: 0;
  background-color: #feffff;
  border-radius: 5px;
  width: 360px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
}

.single-list-page-menu h2 {
  font-size: 16px !important;
  font-weight: normal;
}

.single-list-page-menu i {
  justify-self: center; /* center icons in menu */
  font-size: 22px !important;
  color: #172528;
}

.single-list-page-menu i:active {
  color: #2b7a78;
}

.single-list-page-menu h2 {
  font-size: 20px;
  margin-left: 0.5em;
}

/* Styling for the general Single List Page menu */
.general-menu-grid {
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-template-columns: 3em 1fr 6.5em;
}

.customize-list-icon {
  grid-row: 1 / span 1;
  grid-column: 1 / span 1;
}

.customize-list-desc {
  grid-row: 1 / span 1;
  grid-column: 2 / span 1;
}

.hide-icon {
  grid-row: 2 / span 1;
  grid-column: 1 / span 1;
}

.hide-desc {
  grid-row: 2 / span 1;
  grid-column: 2 / span 1;
}

.sort-icon {
  grid-row: 3 / span 1;
  grid-column: 1 / span 1;
}

.sort-desc {
  grid-row: 3 / span 1;
  grid-column: 2 / span 1;
}

.sort-enter-icon {
  grid-row: 3 / span 1;
  grid-column: 3 / span 1;
}

.delete-completed-icon {
  grid-row: 4 / span 1;
  grid-column: 1 / span 1;
}

.delete-completed-desc {
  grid-row: 4 / span 1;
  grid-column: 2 / span 1;
}

.delete-all-icon {
  grid-row: 5 / span 1;
  grid-column: 1 / span 1;
}

.delete-all-desc {
  grid-row: 5 / span 1;
  grid-column: 2 / span 1;
}

.delete-list-icon {
  grid-row: 6 / span 1;
  grid-column: 1 / span 1;
}

.delete-list-desc {
  grid-row: 6 / span 1;
  grid-column: 2 / span 1;
}

/* Styling for the sorting Single List Page menu */
.sorting-menu-grid {
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-template-columns: 2em 3em 1fr 6.5em;
}

.sort-by-header-back-icon {
  grid-row: 1 / span 1;
  grid-column: 1 / span 1;
}

.sort-by-header-desc {
  grid-row: 1 / span 1;
  grid-column: 2 / span 3;
}

.sort-by-priority-icon {
  grid-row: 2 / span 1;
  grid-column: 2 / span 1;
}

.sort-by-priority-desc {
  grid-row: 2 / span 1;
  grid-column: 3 / span 1;
}

.sort-by-priority-check {
  grid-row: 2 / span 1;
  grid-column: 4 / span 1;
}

.sort-by-deadline-icon {
  grid-row: 3 / span 1;
  grid-column: 2 / span 1;
}

.sort-by-deadline-desc {
  grid-row: 3 / span 1;
  grid-column: 3 / span 1;
}

.sort-by-deadline-check {
  grid-row: 3 / span 1;
  grid-column: 4 / span 1;
}

.sort-by-name-icon {
  grid-row: 4 / span 1;
  grid-column: 2 / span 1;
}

.sort-by-name-desc {
  grid-row: 4 / span 1;
  grid-column: 3 / span 1;
}

.sort-by-name-check {
  grid-row: 4 / span 1;
  grid-column: 4 / span 1;
}

.sort-by-creation-time-icon {
  grid-row: 5 / span 1;
  grid-column: 2 / span 1;
}

.sort-by-creation-time-desc {
  grid-row: 5 / span 1;
  grid-column: 3 / span 1;
}

.sort-by-creation-time-check {
  grid-row: 5 / span 1;
  grid-column: 4 / span 1;
}

.sort-by-modified-time-icon {
  grid-row: 6 / span 1;
  grid-column: 2 / span 1;
}

.sort-by-modified-time-desc {
  grid-row: 6 / span 1;
  grid-column: 3 / span 1;
}

.sort-by-modified-time-check {
  grid-row: 6 / span 1;
  grid-column: 4 / span 1;
}

